Changes Repository Interfaces
Added DateRepository interface with method to get the date of the last object.
Added RepositoryManager interface with basic read/write methods and partial default implementation.
Removed PersistenceManager interface, replaced by the new interfaces.
Refactored usages and made minor changes in repositories.